# GlkLoader

./: ChangeLog  Changelog  Makefile  README  blorbfuncs.c  config.c  config.h  defines.h  dispafuncs.c  generate_glkfuncs.pl  glkloader.c  glkloaderrc.sample  linux_defines.c  linux_defines.h  unixfuncs.c
makefile-samples/: Makefile.cheapglk  Makefile.glkterm  Makefile.models  Makefile.xglk
xpconfig/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  applist.c  applist.h  config.h.in  configure  configure.in  generate_header.pl  internal-build-script  keylist.c  keylist.h  mkinstalldirs  platform.h  platform_rcfile.c  sectionlist.c  sectionlist.h  tokenlist.c  tokenlist.h  xpcdefines.h  xpconfig.c  xpconfig.h
